Immutability improvements